# tinyGPUlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: build_proj.md  s1_overview.md  s2_tgl_language.md  s3_ast.md  s4_codegen.md  s5_parser.md  s6_build_proj.md
examples/: add_vec.tgl  calc_complex.tgl
test/: CMakeLists.txt  kernel_executor.cpp  kernel_executor.hpp  main.cpp
tinyGPUlang/: CMakeLists.txt  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  compiler.cpp  core.cpp  core.hpp  parser.cpp  parser.hpp
